Fix overflow-x:hidden doesn't work in mobile phone

--- a/src/index.scss
+++ b/src/index.scss
@@ -70,6 +70,7 @@ body {
 	width: 100vw;
 	height: 100vh;
 	scroll-behavior: smooth;
+	position: relative;
 }
 
 a {
